--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
         <div class="product">
             <div class="product-image">
-                <a href="https://eraysona.com/notion-finance.html">
+                <a href="https://eraysona.com/notion_finance.html">
                     <img src="finance-notion-premium.png" alt="Premium Finance Notion Template">
                 </a>
                 <div class="offer-tag" style="background: linear-gradient(45deg, #11998e 0%, #38ef7d 100%);">New Arrival</div> 
@@ -321,11 +321,11 @@
                     <h2 class="product-title">Premium Finance Tracker (Notion)</h2>
                     <div class="price-container">
                         <span class="original-price">$49.99</span>
-                        <div class="product-price">$24.99</div> 
+                        <div class="product-price">$19.99</div> 
                     </div>
                 </div>
                 <p class="product-description">Master your money with the ultimate financial dashboard. Track income, expenses, and net worth effortlessly in one place.</p>
-                <a href="https://eraysona.com/notion-finance.html" style="text-decoration: none; margin-top: auto;"> 
+                <a href="https://eraysona.com/notion_finance.html" style="text-decoration: none; margin-top: auto;"> 
                    <button class="btn">Get More Information &rarr;</button>
                 </a>
                 <span class="btn-details">Lifetime access • One-time payment</span>
