added a happy log

--- a/notion_finance.html
+++ b/notion_finance.html
@@ -513,7 +513,7 @@
             Get Organized for $19.99
         </a>
     </div>
-    
+
 
     <div id="salesPopup">
         <div style="width: 8px; height: 8px; background: var(--success); border-radius: 50%; box-shadow: 0 0 5px var(--success);"></div>
@@ -592,6 +592,7 @@
                 }, 12000);
             }, 3000);
         };
+        console.log('hi, I hope you get rich regardless of your purchase :)')
 
         // 4. STICKY BUTTON ON SCROLL
         window.onscroll = function() {
