--- a/notion_finance.html
+++ b/notion_finance.html
@@ -591,7 +591,7 @@
                 }, 12000);
             }, 3000);
         };
-        console.log('hi, I hope you get rich regardless of your purchase :)')
+        console.log('hi, I hope you get rich regardless of your purchase :) - smile more')
 
         window.onscroll = function() {
             if (window.scrollY > 500) {
