fixed details in metabooklanding.html

--- a/metaebooklanding.html
+++ b/metaebooklanding.html
@@ -616,7 +616,7 @@
                     </div>
 
                     <p style="font-size: 0.9rem; color: var(--text-muted); margin-top: 10px;">
-                        My exact Obsidian vault exported as a .zip. Includes folder structures, tag systems, and templates. Just unzip and start.
+                        My exact Obsidian vault exported as a .zip. Includes folder structures, and templates. Just unzip and start.
                     </p>
 
                     <div class="community-proof" style="margin-top: 15px; font-size: 0.8rem; color: #64748b; background: #f1f5f9; padding: 8px; border-radius: 6px; display:inline-block;">
@@ -631,7 +631,7 @@
                         <span data-feather="headphones" style="width: 32px; height: 32px; color: var(--text-main);"></span>
                         <span class="mono" style="color: var(--text-muted); text-decoration: line-through;">$47.00</span>
                     </div>
-                    <h4>Deep Focus Gamma Audio Pack</h4>
+                    <h4>Deep Focus Gamma Audio Pack (SOON)</h4>
                     
                     <div class="audio-viz">
                         <div class="bar" style="animation-delay: 0s"></div>
@@ -657,7 +657,7 @@
                         <span data-feather="calendar" style="width: 32px; height: 32px; color: var(--text-main);"></span>
                         <span class="mono" style="color: var(--text-muted); text-decoration: line-through;">$57.00</span>
                     </div>
-                    <h4>90-Day Skill Mastery Calendar</h4>
+                    <h4>90-Day Skill Mastery Calendar (SOON)</h4>
                     <p style="font-size: 0.9rem; color: var(--text-muted); margin-top: 10px;">
                         A printable PDF and Markdown calendar with daily tasks. Keeps you accountable for 3 months of deep learning.
                     </p>
@@ -669,7 +669,7 @@
                         <span data-feather="cpu" style="width: 32px; height: 32px; color: var(--text-main);"></span>
                         <span class="mono" style="color: var(--text-muted); text-decoration: line-through;">$39.00</span>
                     </div>
-                    <h4>Brain Upgrade Stack 2025</h4>
+                    <h4>Brain Upgrade Stack 2025 (SOON)</h4>
                     <p style="font-size: 0.9rem; color: var(--text-muted); margin-top: 10px;">
                         A curated list of my personal hardware, supplements, and software stack with configuration screenshots.
                     </p>
@@ -732,16 +732,6 @@
                 <div style="margin-top: 15px; display: flex; justify-content: center; gap: 8px; align-items: center;">
                     <span data-feather="lock" style="width: 12px;"></span> 256-Bit SSL Encrypted Payment
                 </div>
-            </div>
-        </div>
-
-        <div class="guarantee-box reveal">
-            <span data-feather="shield" style="width: 32px; height: 32px; color: #10b981; flex-shrink: 0;"></span>
-            <div>
-                <h4 style="margin: 0 0 5px; font-size: 1rem; color: #064e3b;">30-Day Money Back Guarantee</h4>
-                <p style="font-size: 0.85rem; color: #065f46; line-height: 1.5; margin: 0;">
-                    If you don't feel like you've downloaded $290 worth of value, just reply to the email and I'll refund you. No questions asked.
-                </p>
             </div>
         </div>
 
