minor tweaks on metaebooklanding.html

--- a/metaebooklanding.html
+++ b/metaebooklanding.html
@@ -421,6 +421,7 @@
             
             <h1>Stop Studying.<br>Start <span style="color: var(--brand);">Architecting</span> Your Brain.</h1>
             <p>The engineering-grade system to master Code, Math, and Design without burnout.</p>
+            <p><i>FOREVER ACCESS</i></p>
             
             <div style="margin: 3rem 0;">
                 <a href="#pricing" 
